--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,25 @@ set_target_properties(tugas_4_1 PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_D
 create_target_launcher(tugas_4_1 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/minggu_4/tugas1")
 create_default_target_launcher(tugas_4_1 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/minggu_4/tugas1")
 
+# Tugas minggu 5
+## Tugas 1
+add_executable(tugas_5_1
+	minggu_5/tugas1/tugas_1.cpp
+	common/shader.cpp
+	common/shader.hpp
+	common/texture.cpp
+	common/texture.hpp
+	common/control4.cpp
+	common/control4.hpp
+)
+target_link_libraries(tugas_5_1
+	${ALL_LIBS}
+)
+# Xcode and Visual working directories
+set_target_properties(tugas_5_1 PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/minggu_5/tugas1")
+create_target_launcher(tugas_5_1 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/minggu_5/tugas1")
+create_default_target_launcher(tugas_5_1 WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/minggu_5/tugas1")
+
 SOURCE_GROUP(common REGULAR_EXPRESSION ".*/common/.*" )
 SOURCE_GROUP(shaders REGULAR_EXPRESSION ".*/.*shader$" )
 
@@ -148,6 +167,10 @@ add_custom_command(
 add_custom_command(
    TARGET tugas_4_1 POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tugas_4_1${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/minggu_4/tugas1/"
+)
+add_custom_command(
+   TARGET tugas_5_1 POST_BUILD
+   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/tugas_5_1${CMAKE_EXECUTABLE_SUFFIX}" "${CMAKE_CURRENT_SOURCE_DIR}/minggu_5/tugas1/"
 )
 #
 
